# Check

./: CMakeLists.txt  Makefile
cli/: CMakeLists.txt  cppcheckexecutor.cpp  process.cpp  process.h
gui/: log.txt
lib/: checkgost.cpp  checkgost.h  cppcheck.cpp  cppcheck.h  preprocessor.h
